--- a/MutandaServer/MutandaServer.csproj
+++ b/MutandaServer/MutandaServer.csproj
@@ -270,6 +270,8 @@
   <ItemGroup>
     <None Include="Properties\PublishProfiles\orderentry20 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\orderentry20 - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\orderentry20-TEST - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\orderentry20-TEST - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\orderEntryNet-TEST - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\orderEntryNet-TEST - Web Deploy.pubxml" />
   </ItemGroup>
