--- a/MutandaServer/MutandaServer.csproj
+++ b/MutandaServer/MutandaServer.csproj
@@ -272,6 +272,8 @@
     <None Include="Properties\PublishProfiles\orderentry20 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\orderentry20-TEST - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\orderentry20-TEST - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\orderentry30 - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\orderentry30 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\orderEntryNet-TEST - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\orderEntryNet-TEST - Web Deploy.pubxml" />
   </ItemGroup>
